syntax = "proto3";

package domains.v1;
option go_package = "github.com/hantdev/mitras/internal/grpc/domains/v1";


// DomainsService is a service that provides access to
// domains functionalities for Mitras services.
service DomainsService {
  rpc DeleteUserFromDomains(DeleteUserReq) returns (DeleteUserRes) {}
}

message DeleteUserRes {
  bool deleted = 1;
}

message DeleteUserReq{
  string id          = 1;
}
